# dnsscience-coredns-manager

./: .gitignore  INSTALL.md  PROJECT_SPEC.md  README.md  install.sh  pyproject.toml
docker/: Dockerfile  docker-compose.yml
docker/coredns/: Corefile
docker/prometheus/: prometheus.yml
docker/unbound/: unbound.conf
docs/: README.md  api.md  cli.md  kubernetes.md  mcp-tools.md  migration-guide.md
k8s/helm/dnsscience/: Chart.yaml  values.yaml
k8s/helm/dnsscience/templates/: _helpers.tpl  admin-deployment.yaml  admin-service.yaml  api-deployment.yaml  api-service.yaml  crds.yaml  operator-deployment.yaml  operator-rbac.yaml  pdb.yaml  servicemonitor.yaml
src/dnsscience/: __init__.py
src/dnsscience/api/: __init__.py  main.py
src/dnsscience/api/routers/: cache.py  compare.py  config.py  health.py  migrate.py  query.py  service.py
src/dnsscience/cli/: __init__.py  main.py
src/dnsscience/cli/commands/: cache.py  compare.py  config.py  health.py  k8s.py  migrate.py  query.py  service.py
src/dnsscience/core/: __init__.py  base.py  models.py
src/dnsscience/core/compare/: __init__.py  differ.py  engine.py  shadow.py
src/dnsscience/core/coredns/: __init__.py  client.py  config.py
src/dnsscience/core/k8s/: __init__.py  client.py  operator.py
src/dnsscience/core/migrate/: __init__.py  coredns_to_unbound.py  engine.py  unbound_to_coredns.py
src/dnsscience/core/migrate/parsers/: __init__.py  unbound_conf.py
src/dnsscience/core/unbound/: __init__.py  client.py  config.py
src/dnsscience/mcp/: __init__.py  server.py
src/dnsscience/n8n/: __init__.py
src/dnsscience/n8n/nodes/: package.json
src/dnsscience/n8n/nodes/credentials/: DnsScienceApi.credentials.ts
src/dnsscience/n8n/nodes/nodes/DnsCompare/: DnsCompare.node.ts
src/dnsscience/n8n/nodes/nodes/DnsMigrate/: DnsMigrate.node.ts
src/dnsscience/n8n/nodes/nodes/DnsQuery/: DnsQuery.node.ts
src/dnsscience/n8n/nodes/nodes/DnsScience/: DnsScience.node.ts
src/dnsscience/web/admin/: __init__.py  app.py
src/dnsscience/web/admin/templates/: base.html  cache.html  compare.html  config.html  index.html  migrate.html  query.html  service.html
src/dnsscience/web/admin/templates/partials/: cache_purge_result.html  cache_stats.html  config_validation.html  config_view.html  health_status.html  query_result.html  service_status.html
src/dnsscience/web/dashboard/: index.html  package.json
src/dnsscience/web/dashboard/src/: App.tsx  api.ts  index.css  main.tsx  store.ts
src/dnsscience/web/dashboard/src/components/: Layout.tsx
src/dnsscience/web/dashboard/src/pages/: Cache.tsx  Compare.tsx  Config.tsx  Dashboard.tsx  Migrate.tsx  Query.tsx  Service.tsx
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_compare_engine.py  test_coredns_config.py  test_migration.py  test_models.py
