[project]
name = "dnsscience-coredns-manager"
version = "0.1.0"
description = "Enterprise CoreDNS management toolkit with Unbound migration support"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "After Dark Systems, LLC" },
    { name = "DNS Science" },
]
keywords = ["dns", "coredns", "unbound", "kubernetes", "devops", "sre"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    # Core
    "dnspython>=2.6.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "aiofiles>=23.2.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",

    # API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",

    # Web (htmx admin)
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",

    # Kubernetes
    "kubernetes>=29.0.0",

    # MCP
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "httpx[http2]>=0.27.0",
]

n8n = [
    # n8n node development dependencies
    "n8n-nodes-base>=1.0.0",
]

[project.scripts]
dnsctl = "dnsscience.cli.main:app"
dnsctl-api = "dnsscience.api.main:run"
dnsctl-mcp = "dnsscience.mcp.server:run"

[project.urls]
Homepage = "https://github.com/straticus1/dnsscience-coredns-manager"
Documentation = "https://docs.dnsscience.io/coredns-manager"
Repository = "https://github.com/straticus1/dnsscience-coredns-manager"
Issues = "https://github.com/straticus1/dnsscience-coredns-manager/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dnsscience"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["dnsscience"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "kubernetes.*",
    "dns.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --cov=dnsscience --cov-report=term-missing"

[tool.coverage.run]
source = ["src/dnsscience"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
